--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,10 +1,10 @@
 @media(max-width: 600px) {
     body {
         background: url(../images/bg-mobile.svg) no-repeat;
-        background-color: var(--violet);
+        background-color: var(--cor-de-fundo);
     }
 
-    .logo {
+    header {
         margin: 3rem 0rem 2rem 2rem;
     }
 
@@ -14,11 +14,7 @@
         justify-content: center;
     }
 
-    .ilustracao {
-        margin-bottom: 5rem;
-    }
-
-    .ilustracao img {
+    .container img {
         width: 35rem;
     }
 
@@ -27,7 +23,7 @@
         justify-content: center;
         width: 30rem;
         text-align: center;
-        margin-bottom: 6rem;
+        margin: 5rem 0 6rem 0;
     }
 
     .texto-container h1 {
@@ -44,7 +40,7 @@
         font-size: 1.4rem;
         width: 20rem;
     }
-    
+
     .redes-sociais {
         align-items: center;
         justify-content: center;
