--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,20 +4,16 @@ html {
 
 body {
     background: url(../images/bg-desktop.svg) no-repeat;
-    background-color: var(--violet);
+    background-color: var(--cor-de-fundo);
 }
 
-/* HEADER/LOGO */
-
-.logo {
+header {
     margin: 3rem 0 5rem 7rem;
 }
 
-.logo img {
+header img {
     width: 15rem;
 }
-
-/* MAIN/CONTAINER */
 
 .container {
     display: flex;
@@ -28,11 +24,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.ilustracao {
-    text-align: center;
-}
-
-.ilustracao img {
+.container img {
     width: 55rem;
 }
 
@@ -54,7 +46,7 @@ body {
 
 .texto-container a {
     font-size: 2rem;
-    color: var(--violet);
+    color: var(--cor-de-fundo);
     background-color: #ffffff;
     width: 18rem;
     text-align: center;
@@ -64,18 +56,15 @@ body {
 }
 
 .texto-container a:hover {
-    background-color: var(--soft-magenta);
+    background-color: var(--cor-do-hover);
     color: #ffffff;
 }
 
-.texto-container 
-h1,
+.texto-container h1,
 p,
 a {
     margin-bottom: 2rem;
 }
-
-/* FOOTER/REDES-SOCIAIS */
 
 .redes-sociais {
     display: flex;
@@ -83,13 +72,17 @@ a {
     margin-right: 5rem;
 }
 
-.redes-sociais a i {
-    font-size: 3rem;
+.redes-sociais li a i {
+    font-size: 2rem;
     color: #ffffff;
     margin: 1rem;
     transition: 0.3s ease-in-out;
+    border: 1px solid #ffffff;
+    border-radius: 50%;
+    text-align: center;
+    padding: 10px;
 }
 
-.redes-sociais a i:hover {
-    color: var(--soft-magenta);
+.redes-sociais li a i:hover {
+    color: var(--cor-do-hover);
 }
